# gitlab-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
gitlab_agent/: __init__.py  agent.py  cli.py  config.py  gitlab_client.py  project_aliases.py  resources.py  server.py
gitlab_agent/data/: agent_settings.json  llm_defaults.json  tool_schemas.json
gitlab_agent/llm/: anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
gitlab_agent/tools/: base.py  boards.py  groups.py  issues.py  labels.py  merge_requests.py  registry.py  search.py  utils.py
scripts/: gitlab_api_experiments.py
